// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

package org.lfedge.eve.config;
option go_package  = "github.com/lf-edge/eve/api/go/config";
option java_package = "org.lfedge.eve.config";

import "config/devcommon.proto";
import "config/storage.proto";

// OS version key and value pair
message OSKeyTags {
  // deprecated 1; string OSVerKey
  // deprecated 2; string OSVerValue
}

// repeated key value tags compromising
message OSVerDetails {
  // deprecated 12; repeated OSKeyTags baseOSParams
}

message BaseOSConfig {
  UUIDandVersion uuidandversion = 1;
  repeated Drive drives = 3;
  bool activate = 4;

  string baseOSVersion = 10;
  // deprecated 11; OSVerDetails baseOSDetails
}
